objects/CN_Chef_Request__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Name__c</fullName>
        <formula>CN_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chef Requests</relationshipLabel>
        <relationshipName>Chef_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Application_Type_Selling__c</fullName>
        <inlineHelpText>e.g. mousse cake, cream cake, tiramisu</inlineHelpText>
        <label>Application Type Selling</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chef_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Assigned_Chefs_Count__c</fullName>
        <label>Assigned Chefs Count</label>
        <summaryForeignKey>CN_Chefs_Assigned__c.CN_Chef_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Brand__c</fullName>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>5J</fullName>
                </value>
                <value>
                    <fullName>Adamance</fullName>
                </value>
                <value>
                    <fullName>ANTICHICOLLI</fullName>
                </value>
                <value>
                    <fullName>BARNIER OLIVES</fullName>
                </value>
                <value>
                    <fullName>BASTIDES</fullName>
                </value>
                <value>
                    <fullName>BEAUFOR</fullName>
                </value>
                <value>
                    <fullName>Beillevaire</fullName>
                </value>
                <value>
                    <fullName>BERETTA</fullName>
                </value>
                <value>
                    <fullName>BEYONG MEAT</fullName>
                </value>
                <value>
                    <fullName>Cabrifin</fullName>
                </value>
                <value>
                    <fullName>CAPRICE DES DIEUX</fullName>
                </value>
                <value>
                    <fullName>CAVIAR &amp; TRADITIONS</fullName>
                </value>
                <value>
                    <fullName>Chateau d&apos;Estoublon</fullName>
                </value>
                <value>
                    <fullName>Chef Studio OIL</fullName>
                </value>
                <value>
                    <fullName>Chef Studio Pastry</fullName>
                </value>
                <value>
                    <fullName>COEUR DE LION</fullName>
                </value>
                <value>
                    <fullName>CORMAN</fullName>
                </value>
                <value>
                    <fullName>DOBLA</fullName>
                </value>
                <value>
                    <fullName>DODONI</fullName>
                </value>
                <value>
                    <fullName>Elle &amp; Vire</fullName>
                </value>
                <value>
                    <fullName>FERMES DE LA TREMBLAYE</fullName>
                </value>
                <value>
                    <fullName>Giovanni Ferrari</fullName>
                </value>
                <value>
                    <fullName>ILE DE FRANCE</fullName>
                </value>
                <value>
                    <fullName>IRCA</fullName>
                </value>
                <value>
                    <fullName>Joyhana</fullName>
                </value>
                <value>
                    <fullName>LE RUSTIQUE</fullName>
                </value>
                <value>
                    <fullName>Lescure</fullName>
                </value>
                <value>
                    <fullName>Liberty Lane</fullName>
                </value>
                <value>
                    <fullName>LOSTE TRADI-FRANCE</fullName>
                </value>
                <value>
                    <fullName>Milkana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Campaign_Name__c</fullName>
        <formula>CN_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Status</field>
                <operation>notEqual</operation>
                <value>Completed, Aborted</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Chef Requests</relationshipLabel>
        <relationshipName>Chef_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Comments_for_Chef__c</fullName>
        <label>Comments for Chef</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Comments_for_Urgent_Case__c</fullName>
        <inlineHelpText>Urgent special customers or last month delayed to this month, please note</inlineHelpText>
        <label>Comments for Urgent Case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Competitor_Brands__c</fullName>
        <inlineHelpText>What competitor brands customer is buying?</inlineHelpText>
        <label>Competitor Brands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Confirm_From_Apex_DateTime__c</fullName>
        <label>Confirm From Apex DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Cost_Limit__c</fullName>
        <inlineHelpText>e.g. drink cost 20%, dessert cost 30%</inlineHelpText>
        <label>Cost Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Attendees_Title__c</fullName>
        <label>Customer Attendees Title</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Owner</fullName>
                </value>
                <value>
                    <fullName>R&amp;D Manager</fullName>
                </value>
                <value>
                    <fullName>Purchase Manager</fullName>
                </value>
                <value>
                    <fullName>Chef</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Customer_City__c</fullName>
        <formula>CN_Account__r.CN_City_CN__r.Name  + &quot; &quot; +  CN_Account__r.CN_City_EN__c</formula>
        <label>Customer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_ID__c</fullName>
        <formula>CN_Account__r.CN_Customer_Code__c</formula>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Demo_Duration__c</fullName>
        <formula>CN_Demo_End_Date__c -  CN_Demo_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Demo_End_Date__c</fullName>
        <label>Demo End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Demo_Report_Count__c</fullName>
        <label>Demo Report Count</label>
        <summaryForeignKey>CN_Demo_Report__c.CN_Chef_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Demo_Start_Date__c</fullName>
        <label>Demo Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Display_in_Calendar__c</fullName>
        <formula>IF( ISBLANK(CN_Account__r.Name), &quot;&quot;, CN_Account__r.Name + &quot;-&quot;) +
IF( ISBLANK(CN_Opportunity__r.Name), &quot;&quot;, CN_Opportunity__r.Name + &quot;-&quot;) +
IF( ISBLANK(CN_Campaign__r.Name), &quot;&quot;, CN_Campaign__r.Name + &quot;-&quot;) +
TEXT(CN_Event_Type__c) + &quot;-&quot; +
TEXT(CN_Event_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display in Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_End_Date_AM_PM__c</fullName>
        <label>End Date AM/PM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Event_Detail__c</fullName>
        <label>Event Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Event_Location_End_Date_AM_PM__c</fullName>
        <label>Event Location End Date AM/PM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Event_Location_End_Date_Formula__c</fullName>
        <formula>IF(
ISBLANK(CN_Event_Location_End_Date__c),
null,
IF( 
ISPICKVAL(CN_Event_Location_End_Date_AM_PM__c , &quot;AM&quot;), 
DATETIMEVALUE(TEXT(CN_Event_Location_End_Date__c) + &quot; 08:00:00&quot;), 
DATETIMEVALUE(TEXT(CN_Event_Location_End_Date__c) + &quot; 20:00:00&quot;) 
)
)</formula>
        <label>Event Location End Date Formula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Event_Location_End_Date__c</fullName>
        <label>Event Location End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Event_Location_Start_Date_AM_PM__c</fullName>
        <label>Event Location Start Date AM/PM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Event_Location_Start_Date_Formula__c</fullName>
        <formula>IF(ISBLANK(CN_Event_Location_Start_Date__c ), null, IF(
    ISPICKVAL(CN_Event_Location_Start_Date_AM_PM__c , &quot;AM&quot;),
      DATETIMEVALUE(TEXT(CN_Event_Location_Start_Date__c) + &quot; 08:00:00&quot;),
    DATETIMEVALUE(TEXT(CN_Event_Location_Start_Date__c) + &quot; 20:00:00&quot;)
) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Location Start Date Formula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Event_Location_Start_Date__c</fullName>
        <label>Event Location Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Event_Location__c</fullName>
        <label>Event Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SH Chef Studio</fullName>
                </value>
                <value>
                    <fullName>SH R&amp;D Center</fullName>
                </value>
                <value>
                    <fullName>BJ Chef Studio</fullName>
                </value>
                <value>
                    <fullName>SZ Chef Studio</fullName>
                </value>
                <value>
                    <fullName>The Third Party</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Event_Theme__c</fullName>
        <label>Event Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-on-1 service</fullName>
                </value>
                <value>
                    <fullName>Public Demo</fullName>
                </value>
                <value>
                    <fullName>VIP Class</fullName>
                </value>
                <value>
                    <fullName>Live Streaming</fullName>
                </value>
                <value>
                    <fullName>Short Video</fullName>
                </value>
                <value>
                    <fullName>SINODIS Event</fullName>
                </value>
                <value>
                    <fullName>OFF</fullName>
                </value>
                <value>
                    <fullName>Paperwork</fullName>
                </value>
                <value>
                    <fullName>Self Practice &amp; Training</fullName>
                </value>
                <value>
                    <fullName>Market Visit</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Company Events</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Product Testing</fullName>
                </value>
                <value>
                    <fullName>Recipes R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Shooting</fullName>
                </value>
                <value>
                    <fullName>Marketing Development</fullName>
                </value>
                <value>
                    <fullName>Road Show</fullName>
                </value>
                <value>
                    <fullName>Taskforce</fullName>
                </value>
                <value>
                    <fullName>Full Solution Approach</fullName>
                    <isActive>false</isActive>
                    <label>Full Solution Approach</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Guest_Chef__c</fullName>
        <label>Guest Chef</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Auto_Approve__c</fullName>
        <formula>RecordType.DeveloperName = &apos;CN_Chef_Self_Work_Request&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Auto Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Deletable__c</fullName>
        <formula>OR(ISPICKVAL(CN_Status__c  , &apos;New&apos;), ISPICKVAL(CN_Status__c  , &apos;Rejected&apos;)) &amp;&amp;  CN_Assigned_Chefs_Count__c = 0 &amp;&amp;  CN_Demo_Report_Count__c = 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Deletable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Subimit_Within_One_Day__c</fullName>
        <formula>CN_Ready_Date__c =  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN_Is_Subimit_Within_One_Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Key_Products_to_Push__c</fullName>
        <inlineHelpText>Please input SKUs or brands.</inlineHelpText>
        <label>Key Products to Push</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_MKT_CCE_PIC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MKT/CCE PIC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chef_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>equals</operation>
                <value>Proposal/Demo/Sample, Quote/Negotiation, Closed Won</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Chef Requests</relationshipLabel>
        <relationshipName>Chef_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Owner_Name__c</fullName>
        <formula>Owner:User.LastName + &quot; &quot; +   Owner:User.FirstName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Please_Confirm_Ready__c</fullName>
        <formula>CASE(
TEXT( CN_Status__c ),
&quot;New&quot;, $Label.CN_PleaseConfirm_Value_BackToNew,
&quot;Ready for Approval&quot;, $Label.CN_PleaseConfirm_Value_ReadyForApproval,
&quot;Submitted for Approval&quot;, $Label.CN_PleaseConfirm_Value_AlreadySubmitted,
$Label.CN_PleaseConfirm_Value_AlreadySubmitted
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Please Confirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Please_Confirm__c</fullName>
        <formula>IF( CN_Confirmed__c , $Label.CN_Chef_Request_Confirm_Info_Message,  $Label.CN_Chef_Request_Uncomfirm_Info_Message)</formula>
        <label>Please Confirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Price_Positioning__c</fullName>
        <inlineHelpText>e.g. Average price of one drink is 32 RMB, average price of a cake is 48 RMB.</inlineHelpText>
        <label>Price Positioning(Customer price)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product_Category__c</fullName>
        <label>Product Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>GOURMET &amp; GROCERY</fullName>
                </value>
                <value>
                    <fullName>PASTRY</fullName>
                </value>
                <value>
                    <fullName>Chef Studio Pastry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Ready_Date__c</fullName>
        <label>Ready Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Channel__c</fullName>
        <formula>CN_Account__r.CN_Sales_Team_UI__r.Name</formula>
        <label>Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Start_Date_AM_PM__c</fullName>
        <label>Start Date AM/PM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_The_Third_Party_City__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Must input if event location is selected as the third party</inlineHelpText>
        <label>The Third Party City</label>
        <referenceTo>CN_City__c</referenceTo>
        <relationshipLabel>Chef Requests</relationshipLabel>
        <relationshipName>Chef_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Today_Period__c</fullName>
        <formula>IF(
 DAY( TODAY() ) &gt; 15, &quot;Late&quot;, &quot;Early&quot;
)</formula>
        <label>Today Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Total_Days_Of_End_Date_Month__c</fullName>
        <formula>IF(
  MONTH(  CN_Demo_End_Date__c ) = 12,
  DAY(DATE( YEAR( CN_Demo_End_Date__c ), 12, 31 )),
  DAY(DATE( YEAR( CN_Demo_End_Date__c ), MONTH ( CN_Demo_End_Date__c ) + 1, 1 ) - 1) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days Of End Date Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Using_The_Entire_Kitchen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Using the Entire Kitchen?</label>
        <type>Checkbox</type>
    </fields>
    <label>Chef Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CN_Account_Name__c</columns>
        <columns>CN_Product_Category__c</columns>
        <columns>CN_Brand__c</columns>
        <columns>CN_Event_Theme__c</columns>
        <columns>CN_Event_Type__c</columns>
        <columns>CN_Event_Location__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CN_Account_Name__c</columns>
        <columns>CN_Product_Category__c</columns>
        <columns>CN_Brand__c</columns>
        <columns>CN_Event_Theme__c</columns>
        <columns>CN_Event_Type__c</columns>
        <columns>CN_Event_Location__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Confirmed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All - Confirmed</label>
    </listViews>
    <listViews>
        <fullName>All_Waiting_for_Confirm</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CN_Account_Name__c</columns>
        <columns>CN_Product_Category__c</columns>
        <columns>CN_Brand__c</columns>
        <columns>CN_Event_Theme__c</columns>
        <columns>CN_Event_Type__c</columns>
        <columns>CN_Event_Location__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>CN_Confirmed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All - Waiting for Confirm</label>
        <sharedTo>
            <role>CN_Chef_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Waiting_for_Demo_Report</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CN_Account_Name__c</columns>
        <columns>CN_Product_Category__c</columns>
        <columns>CN_Brand__c</columns>
        <columns>CN_Event_Theme__c</columns>
        <columns>CN_Event_Type__c</columns>
        <columns>CN_Event_Location__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Confirmed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CN_Demo_Report_Count__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>CN_Chef_Request__c.CN_Chef_Self_Work_Request</value>
        </filters>
        <label>All - Waiting for Demo Report</label>
        <sharedTo>
            <role>CN_Chef_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Brand_5J_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>5J</value>
        </filters>
        <label>Brand-5J-Chef Req</label>
    </listViews>
    <listViews>
        <fullName>CN_Brand_ANTICHICOLLI_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>ANTICHICOLLI</value>
        </filters>
        <label>Brand-ANTICHICOLLI-Chef Req</label>
    </listViews>
    <listViews>
        <fullName>CN_Brand_BARNIER_OLIVES_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>BARNIER OLIVES</value>
        </filters>
        <label>Brand-BARNIER OLIVES-Chef Req</label>
    </listViews>
    <listViews>
        <fullName>CN_Brand_BASTIDES_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>BASTIDES</value>
        </filters>
        <label>Brand-BASTIDES-Chef Req</label>
    </listViews>
    <listViews>
        <fullName>CN_Brand_BEAUFOR_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>BEAUFOR</value>
        </filters>
        <label>Brand-BEAUFOR-Chef Req</label>
    </listViews>
    <listViews>
        <fullName>CN_Brand_BERETTA_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>BERETTA</value>
        </filters>
        <label>Brand-BERETTA-Chef Req</label>
    </listViews>
    <listViews>
        <fullName>CN_Brand_BEYONG_MEAT_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>BEYONG MEAT</value>
        </filters>
        <label>Brand-BEYONG MEAT-Chef Req</label>
    </listViews>
    <listViews>
        <fullName>CN_Brand_Beillevaire_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>Beillevaire</value>
        </filters>
        <label>Brand-Beillevaire-Chef Req</label>
    </listViews>
    <listViews>
        <fullName>CN_Brand_CAPRICE_DES_DIEUX_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>CAPRICE DES DIEUX</value>
        </filters>
        <label>Brand-CAPRICE DES DIEUX-Chef Req</label>
    </listViews>
    <listViews>
        <fullName>CN_Brand_CAVIAR_TRADITIONS_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>CAVIAR &amp; TRADITIONS</value>
        </filters>
        <label>Brand-CAVIAR &amp; TRADITIONS-Chef Req</label>
    </listViews>
    <listViews>
        <fullName>CN_Brand_COEUR_DE_LION_Chef_Req</fullName>
        <columns>NAME</columns>
        <columns>CN_Account__c</columns>
        <columns>CN_Campaign__c</columns>
        <columns>CN_Confirmed__c</columns>
        <columns>CN_Demo_Start_Date__c</columns>
        <columns>CN_Demo_End_Date__c</columns>
        <columns>CN_Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CN_Brand__c</field>
            <operation>equals</operation>
            <value>COEUR DE LION</value>
        </filters>
        <label>Brand-COEUR DE LION-Chef Req</label>
    </listViews>
    <nameField>
        <displayFormat>CDR-{0000000000}</displayFormat>
        <label>Chef Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chef Requests</pluralLabel>
    <recordTypes>
        <fullName>CN_1on1_Service_Chef_Request</fullName>
        <active>true</active>
        <label>1on1 Service Chef Request Edit</label>
    </recordTypes>
    <recordTypes>
        <fullName>CN_1on1_Service_Chef_Request_New</fullName>
        <active>true</active>
        <label>1on1 Service Chef Request</label>
    </recordTypes>
</CustomObject>